plugins/kotlin/idea/tests/testData/checker/regression/ClassDeclarationAsExpression2.kt
fun g() = 1 < <error descr="[DECLARATION_IN_ILLEGAL_CONTEXT]">class A</error>